tests/expectations/parser/functions/name_function_constructo_fail.out
Error [EPAR0370005]: expected an identifier -- found 'constructor'
    --> test:2:22
     |
   2 |     async transition constructor(x: u8) -> u8 {
     |                      ^^^^^^^^^^^
